--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -253,8 +253,19 @@ body {
           justify-content: center;
           padding: calc(15px/2) 0;
           position: relative;
+          transition: .3s ease;
+          
+          @include mq{
+            &:hover{
+              opacity: .6;
+              .sankaku{
+                right: 3.5px;
+              }
+            }
+          }
           
           .sankaku{
+            transition: .3s ease;
             position: absolute;
             right: 5.5px;
             top: 7px;
@@ -266,6 +277,12 @@ body {
 
         .brandsite-pc,.another-page{
           position: relative;
+
+          &:hover{
+            &:before{
+              animation: menuBorderAnim .5s ease;
+            }
+          }
           &::before{
             content: '';
             display: block;
@@ -275,6 +292,15 @@ body {
             position: absolute;
             left: 0;
             bottom: 0;
+          }
+
+          @keyframes menuBorderAnim{
+            0%{
+              width: 0;
+            }
+            100%{
+              width: 100%;
+            }
           }
         }
 
@@ -400,33 +426,49 @@ body {
        }
 
        .modal-link{
-        display: flex;
-        position: absolute;
-        bottom: calc(145px/2);
-        left: calc(557px/2);
-        @include mq_maxH() {
-          left: calc((557/1270) * #{$new_vh});
-          bottom: calc((145/1270) * #{$new_vh});
-        }
+          display: flex;
+          position: absolute;
+          bottom: calc(145px/2);
+          left: calc(557px/2);
+          cursor: pointer;
+          @include mq_maxH() {
+            left: calc((557/1270) * #{$new_vh});
+            bottom: calc((145/1270) * #{$new_vh});
+          }
+
+          &:hover{
+
+            .modal-txt{
+              opacity: .5;
+            }
+
+            .modal-btn{
+              transform: rotate(180deg);
+            }
+
+          }
        }
 
        .modal-txt{
         width: calc(249px/2);
+        transition: .3s ease;
         @include mq_maxH() {
           width: calc((249/1270) * #{$new_vh});
         }
        }
 
-       .moda-btn{
+       .modal-btn{
          width: 14px;
          height: 14px;
          background: #fff;
          border-radius: 50%;
          position: relative;
          margin-top: calc(-19px/2);
+         cursor: pointer;
+         transition: .5s ease;
          @include mq_maxH() {
-          width: calc((14/1270) * #{$new_vh});
-          height: calc((14/1270) * #{$new_vh});
+          width: calc((28/1270) * #{$new_vh});
+          height: calc((28/1270) * #{$new_vh});
           margin-top: calc((-19/1270) * #{$new_vh});
         }
          .plus{    
@@ -467,11 +509,11 @@ body {
 
           .ph-link {
             @include mq() {
-              .ph img, .ph2 img, .ph-switch img {
+              .ph img,.ph1 img, .ph2 img, .ph-switch img {
                 transition: .3s ease;
               }
               &:hover {
-                .ph img, .ph2 img, .ph-switch img {
+                .ph img,.ph1 img, .ph2 img, .ph-switch img {
                   transform: scale(1.02);
                   transition: .3s ease;
                 }
@@ -581,10 +623,15 @@ body {
               }
               .buy-btn {
                 width: 40px;
-
-
+                transition: .4s ease;
                 @include mq_maxH() {
                   width: calc((80 / 1270) * #{$new_vh});
+                }
+
+                @include mq{
+                  &:hover{
+                    opacity: .6;
+                  }
                 }
               }
             }
@@ -878,6 +925,8 @@ body {
             .txt-contents{
               margin-top: calc(-150px/2);
               margin-left: calc(51px/2);
+              z-index: 5;
+              position: relative;
               @include mq_maxH() {
                 margin-top: calc((-150/1270) * #{$new_vh});
                 margin-left: calc((51/1270) * #{$new_vh});
@@ -997,6 +1046,8 @@ body {
             .txt-contents{
               margin-top: calc(-140px/2);
               margin-left: calc(-171px/2);
+              position: relative;
+              z-index: 5;
               @include mq_maxH() {
                 margin-top: calc((-140/1270) * #{$new_vh});
                 margin-left: calc((-171/1270) * #{$new_vh});
@@ -1424,6 +1475,8 @@ body {
             .txt-contents{
               margin-top: calc(-790px/2);
               margin-left: calc(-168px/2);
+              position: relative;
+              z-index: 5;
               @include mq_maxH() {
                 margin-top: calc((-790/1270) * #{$new_vh});
                 margin-left: calc((-168/1270) * #{$new_vh});
@@ -2022,6 +2075,8 @@ body {
               margin-top: calc(-305px/2);
               margin-left: calc(-104px/2);
               color: #fff;
+              position: relative;
+              z-index: 5;
               @include mq_maxH() {
                 margin-top: calc((-305/1270) * #{$new_vh});
                 margin-left: calc((-104/1270) * #{$new_vh});
@@ -2233,12 +2288,19 @@ body {
           @include DNPShueiMinPr6N_B();
           font-size: 14px;
           margin-bottom: calc(31px/2);
+          transition: .3s ease;
           @include mq_maxH() {
             width: calc((563/1270) * #{$new_vh});
             margin-bottom: calc((31/1270) * #{$new_vh});
             font-size: calc((28/1270) * #{$new_vh});
             padding: calc((39/1270) * #{$new_vh}) 0;
             border-radius: calc((56/1270) * #{$new_vh});
+          }
+
+          @include mq{
+            &:hover{
+              opacity: .6;
+            }
           }
 
 
@@ -2269,15 +2331,22 @@ body {
           align-items: center;
           width: calc(563px/2);
           border-radius: calc(56px/2);
-          padding: calc(39px/2) 0;
+          padding: calc(45px/2) 0;
           @include DNPShueiMinPr6N_B();
           font-size: 14px;
+          transition: .3s ease;
 
           @include mq_maxH() {
             width: calc((563/1270) * #{$new_vh});
-            padding: calc((39/1270) * #{$new_vh}) 0;
+            padding: calc((45/1270) * #{$new_vh}) 0;
             border-radius: calc((56/1270) * #{$new_vh});
             font-size: calc((28/1270) * #{$new_vh}) 0;
+          }
+
+          @include mq{
+            &:hover{
+              opacity: .6;
+            }
           }
         }
 
@@ -2331,6 +2400,24 @@ body {
           width: fit-content;
           position: relative;
           margin-bottom: calc(95px/2);
+          transition: .3s ease;
+
+          &:hover{
+            opacity: .6;
+            &::before{
+              animation: borderAnim .5s ease;
+
+              @keyframes borderAnim{
+                0%{
+                 width: 0;
+                }
+                100%{
+                  width: calc(112px/2);
+                }
+              }
+            }
+
+          }
           @include mq_maxH() {
             margin-bottom: calc((95/1270) * #{$new_vh});
             font-size: calc((28/1270) * #{$new_vh});
@@ -2442,6 +2529,7 @@ body {
       position: absolute;
       top: -1px;
       left: -1px;
+      cursor: pointer;
     }
 
     .prof-img{
