--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -357,6 +357,37 @@ body {
           // max-width: (750px/2);
           width: auto;
         }
+
+        &.show{
+          .heading{
+            clip-path: inset(0 0 0 0);
+            filter: blur(0);
+          }
+
+          .page1-main{
+            transform: none;
+            opacity: 1;
+
+          }
+
+          .page-main-logo{
+            filter: blur(0);
+            opacity: 1;
+          }
+
+          .modal-link{
+            opacity: 1;
+            clip-path: inset(0 0 0 0);
+
+          }
+          
+          .page-ofuda{
+            animation: sample_anime02 3s ease 1.2s;
+            visibility: visible;
+            opacity: 1;
+           
+          }
+        }
        .heading{
           font-size: 11px;
           width: calc(657px/2);
@@ -371,6 +402,10 @@ body {
           line-height: calc(38/22);
           position:relative;
           margin-top: calc(63px/2);
+          clip-path: inset(0 0 100% 0);
+          transition: .7s ease;
+          filter: blur(4px);
+
           @include mq_maxH() {
             margin-top: calc((63/1270) * #{$new_vh});
             width: calc((657/1270) * #{$new_vh});
@@ -394,6 +429,9 @@ body {
        .page1-main{
           width: calc(778px/2);
           margin-top: 20px;
+          opacity: 0;
+          transform: translateY(10px);
+          transition:opacity 1s ease .3s,transform 1s ease .3s;
 
           @include mq_maxH() {
             width: calc((778/1270) * #{$new_vh});
@@ -404,6 +442,9 @@ body {
        .page-main-logo{
           width: calc(348px/2);
           margin-top: 10px;
+          opacity: 0;
+          filter: blur(10px);
+          transition: .8s ease .6s;
 
           @include mq_maxH() {
             width: calc((348/1270) * #{$new_vh});
@@ -417,11 +458,33 @@ body {
           width: calc(69px/2);
           left: calc(37px/2);
           bottom: calc(43px/2);
+          opacity: 0;
+          visibility: hidden;
+          transition: .6s ease 1.2s;
+          
+
 
           @include mq_maxH() {
             width: calc((69/1270) * #{$new_vh});
             left: calc((37/1270) * #{$new_vh});
             bottom: calc((43/1270) * #{$new_vh});
+          }
+          @keyframes sample_anime02 {
+            0% {
+                visibility:visible;
+                opacity: 0;
+                transform:  rotate(-30deg) scale(1.6);
+            }
+            30% {
+                visibility:visible;
+                opacity: 0.8;
+                transform:  rotate(5deg) scale(1.02);
+            }
+            100% {
+                visibility:visible;
+                opacity: 1.0;
+                transform: rotate(0deg);
+            }
           }
        }
 
@@ -431,6 +494,11 @@ body {
           bottom: calc(145px/2);
           left: calc(557px/2);
           cursor: pointer;
+          opacity: 0;
+          clip-path: inset(0 100% 0 0);
+          transition: .6s ease .9s;
+          padding-top: 4%;
+
           @include mq_maxH() {
             left: calc((557/1270) * #{$new_vh});
             bottom: calc((145/1270) * #{$new_vh});
@@ -537,27 +605,52 @@ body {
               opacity: 0;
             }
           }
-          @keyframes dis_appear {
-            0% {
-                opacity: 1;
+          @keyframes appear1 {
+            0%, 33.33% {
+              opacity: 1;
             }
-            50%,
-            100% {
-                opacity: 0;
-            }
-          }
-          @keyframes appear {
-            0% {
-                opacity: 0;
-            }
-            50%,
-            100% {
-                opacity: 1;
+            33.34%, 100% {
+              opacity: 0;
             }
           }
+          
+          @keyframes appear2 {
+            0%, 33.33% {
+              opacity: 0;
+            }
+            33.34%, 66.66% {
+              opacity: 1;
+            }
+            66.67%, 100% {
+              opacity: 0;
+            }
+          }
+          
+          @keyframes appear3 {
+            0%, 100% {
+              opacity: 0;
+            }
+            0%, 33.33% {
+              opacity: 0;
+            }
+            33.34%, 66.66% {
+              opacity: 0;
+            }
+            66.67%, 100% {
+              opacity: 1;
+            }
+          }
+         
           .ph,.ph1, .ph2 {
             position: relative;
             z-index: 2;
+            filter: blur(10px);
+            transition: .5s ease-in-out;
+
+
+            &.show{
+              filter: blur(0);
+            }
             a {
               img {
                 -webkit-transition: .3s ease;
@@ -677,10 +770,36 @@ body {
               right: 0;
               margin-top: (24px/2);
               margin-right: -(325px/2);
+              opacity: 0;
+              transition: .6s .2s;
+              .anim-inner{
+                transform: translateY(10px);
+                transition: 1s ease .1s;
+              }
+
+              &.show{
+                opacity: 1;
+                .anim-inner{
+                  animation: yurayura 2.5s ease .8s infinite;
+                  transform: translateY(0);
+                }
+              }
               @include mq_maxH() {
                 width: calc((293/1270) * #{$new_vh});
                 margin-top: calc((24/1270) * #{$new_vh});
                 margin-right: calc((-325/1270) * #{$new_vh});
+              }
+
+              @keyframes yurayura{
+                0%{
+                  transform: rotate(0deg);
+                }
+                50%{
+                  transform: rotate(8deg);
+                }
+                100%{
+                  transform: rotate(0deg);
+                }
               }
             }
             .deco-crown {
@@ -689,6 +808,14 @@ body {
               top: 0;
               left: 0;
               margin-top: (115px/2);
+              transform: translateX(-30px);
+              transition:all 1.4s ease;
+              opacity: 0;
+
+              &.show{
+                transform: none;
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((263/1270) * #{$new_vh});
                 margin-top: calc((115/1270) * #{$new_vh});
@@ -706,6 +833,33 @@ body {
               width: (708px/2);
               @include mq_maxH() {
                 width: calc((708/1270) * #{$new_vh});
+              }
+              &.show{
+                
+              }
+              
+            }
+
+            .ph1{
+              &.show{
+                animation: appear1 3s steps(2) .5s  infinite;
+              }
+            }
+            .ph2{
+              position: absolute;
+              top: 0;
+              left: 0;
+              &.show{
+                animation: appear2 3s steps(2) .5s  infinite;
+              }
+            }
+            
+            .ph3{
+              position: absolute;
+              top: 0;
+              left: 0;
+              &.show{
+                animation: appear3 3s steps(2) .5s  infinite;
               }
             }
             
@@ -745,12 +899,15 @@ body {
               width: calc(290px/2);
               margin-top: calc(261px/2);
               margin-left: calc(-436px/2);
+             
 
               @include mq_maxH() {
                 width: calc((290/1270) * #{$new_vh});
                 margin-top: calc((261/1270) * #{$new_vh});
                 margin-left: calc((-436/1270) * #{$new_vh});
               }
+
+
             }
             .deco-illust2{
               position: absolute;
@@ -787,6 +944,13 @@ body {
               width: calc(250px/2);
               margin-left: calc(-128px/2);
               margin-top: calc(65px/2);
+              transform: translateX(20px);
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+              &.show{
+                transform: translateX(0px);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((250/1270) * #{$new_vh});
                 margin-top: calc((65/1270) * #{$new_vh});
@@ -805,6 +969,29 @@ body {
               width: calc(582px/2);
               @include mq_maxH() {
                 width: calc((582/1270) * #{$new_vh});
+              }
+            }
+
+            .ph1{
+              &.show{
+                animation: appear1 3s steps(2) .5s  infinite;
+              }
+            }
+            .ph2{
+              position: absolute;
+              top: 0;
+              left: 0;
+              &.show{
+                animation: appear2 3s steps(2) .5s infinite;
+              }
+            }
+            
+            .ph3{
+              position: absolute;
+              top: 0;
+              left: 0;
+              &.show{
+                animation: appear3 3s steps(2) .5s infinite;
               }
             }
 
@@ -899,6 +1086,14 @@ body {
               right: 0;
               margin-top: calc(-117px/2);
               margin-right: calc(327px/2);
+              transform: translateX(20px);
+              transition:all 1.4s ease .1s;
+              opacity: 0;
+
+              &.show{
+                transform: translateX(0px);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((250/1270) * #{$new_vh});
                 margin-top: calc((-117/1270) * #{$new_vh});
@@ -920,6 +1115,29 @@ body {
               width: calc(850px/2);
               @include mq_maxH() {
                 width: calc((850/1270) * #{$new_vh});
+              }
+            }
+
+            .ph1{
+              &.show{
+                animation: appear1 3s steps(2) .5s infinite;
+              }
+            }
+            .ph2{
+              position: absolute;
+              top: 0;
+              left: 0;
+              &.show{
+                animation: appear2 3s steps(2) .5s infinite;
+              }
+            }
+            
+            .ph3{
+              position: absolute;
+              top: 0;
+              left: 0;
+              &.show{
+                animation: appear3 3s steps(2) .5s infinite;
               }
             }
             .txt-contents{
@@ -960,6 +1178,14 @@ body {
               left: 0;
               margin-top: calc(663px/2);
               margin-left: calc(-143px/2);
+              transform: translateY(10px);
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+
+              &.show{
+                transform: translateY(0);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((263/1270) * #{$new_vh});
                 margin-top: calc((663/1270) * #{$new_vh});
@@ -1004,6 +1230,14 @@ body {
               left: 0;
               margin-top: -11px;
               margin-left: calc(119px/2);
+              transform: translateX(-12px);
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+              }
 
               @include mq_maxH() {
                 width: calc((365/1270) * #{$new_vh});
@@ -1069,6 +1303,14 @@ body {
               margin-top: calc(770px/2);
               margin-left: calc(-32px/2);
               z-index: 1;
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+              transform: translateX(10px);
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((394/1270) * #{$new_vh});
                 margin-top: calc((770/1270) * #{$new_vh});
@@ -1114,6 +1356,14 @@ body {
               margin-top: calc(837px/2);
               margin-left: calc(-23px/2);
               z-index: 1;
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+              transform: translateY(10px);
+
+              &.show{
+                transform: translateY(0);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((246/1270) * #{$new_vh});
                 margin-top: calc((837/1270) * #{$new_vh});
@@ -1128,6 +1378,14 @@ body {
               margin-top: calc(300px/2);
               margin-right: calc(-98px/2);
               z-index: 1;
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+              transform: translateX(10px);
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((301/1270) * #{$new_vh});
                 margin-top: calc((300/1270) * #{$new_vh});
@@ -1191,6 +1449,37 @@ body {
               width: calc(551px/2);
               @include mq_maxH() {
                 width: calc((551/1270) * #{$new_vh});
+              }
+            }
+            .ph1{
+              animation: showOff 3s steps(1) .5s  infinite;
+            }
+            .ph2{
+              animation: show 3s steps(1) .5s infinite;
+              position: absolute;
+              top: 0;
+              left: 0;
+              margin-top: calc(-263px/2);
+              margin-left: calc(-72px/2);
+              width: calc(673px/2);
+            }
+
+
+            @keyframes showOff {
+              0% {
+                  opacity: 1;
+              }
+              50%,100% {
+                  opacity: 0;
+              }
+            }
+            
+            @keyframes show {
+              0% {
+                  opacity: 0;
+              }
+              50%,100% {
+                  opacity: 1;
               }
             }
 
@@ -1282,6 +1571,15 @@ body {
                 width: calc((365/1270) * #{$new_vh});
                 margin-top: calc((33/1270) * #{$new_vh});
                 margin-left: calc((-149/1270) * #{$new_vh});
+              }
+
+              transition:all 1.4s ease .2s;
+              opacity: 0;
+              transform: translateX(-10px);
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
               }
             }
 
@@ -1497,10 +1795,27 @@ body {
               left: 0;
               margin-top: calc(434px/2);
               margin-left: calc(-132px/2);
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-top: calc((434/1270) * #{$new_vh});
                 margin-left: calc((-132/1270) * #{$new_vh});
+              }
+
+              @keyframes kirakira{
+                0%{
+                  transform: rotate(0);
+                }
+                50%{
+                  transform: rotateY(180deg);
+                }
+                100%{
+                  transform: rotate(0);
+                }
               }
             }
             .deco-kirakira2{
@@ -1614,6 +1929,11 @@ body {
               right: 0;
               margin-top: calc(754px/2);
               margin-right: calc(174px/2);
+              &.show{
+                img{
+                  animation: kirakira 3s ease 2s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((125/1270) * #{$new_vh});
                 margin-top: calc((754/1270) * #{$new_vh});
@@ -1640,6 +1960,11 @@ body {
               left: 0;
               margin-top: calc(271px/2);
               margin-left: calc(-105px/2);
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.7s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-top: calc((271/1270) * #{$new_vh});
@@ -1710,6 +2035,12 @@ body {
               top: 0;
               right: 0;
               margin-right: calc(91px/2);
+
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.4s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-right: calc((91/1270) * #{$new_vh});
@@ -1811,6 +2142,12 @@ body {
               right: 0;
               margin-top: calc(-138px/2);
               margin-right: calc(-35px/2);
+
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.8s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-top: calc((-138/1270) * #{$new_vh});
@@ -1992,6 +2329,11 @@ body {
               left: 0;
               margin-top: calc(271px/2);
               margin-left: calc(-80px/2);
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.6s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((54/1270) * #{$new_vh});
                 margin-top: calc((271/1270) * #{$new_vh});
@@ -2005,6 +2347,12 @@ body {
               left: 0;
               margin-top: calc(869px/2);
               margin-left: calc(441px/2);
+
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.3s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-top: calc((869/1270) * #{$new_vh});
@@ -2018,6 +2366,11 @@ body {
               left: 0;
               margin-top: calc(-146px/2);
               margin-left: calc(532px/2);
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.5s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-top: calc((-146/1270) * #{$new_vh});
@@ -2097,6 +2450,12 @@ body {
               right: 0;
               margin-top: calc(-251px/2);
               margin-right: calc(66px/2);
+
+              &.show{
+                img{
+                  animation: kirakira 3s ease 1.2s infinite;
+                }
+              }
               @include mq_maxH() {
                 width: calc((89/1270) * #{$new_vh});
                 margin-top: calc((-251/1270) * #{$new_vh});
@@ -2269,6 +2628,12 @@ body {
           width: calc(89px/2);
           margin-top: calc(439px/2);
           margin-right: calc(-188px/2);
+
+          &.show{
+            img{
+              animation: kirakira 3s ease 1s infinite;
+            }
+          }
           @include mq_maxH() {
             width: calc((89/1270) * #{$new_vh});
             margin-top: calc((439/1270) * #{$new_vh});
@@ -2558,24 +2923,4 @@ body {
     }
   }
 
-}
-
-@keyframes shift_front {
-  0% {
-      opacity: 1;
-  }
-  50%,
-  100% {
-      opacity: 0;
-  }
-}
-
-@keyframes shift_back {
-  0% {
-      opacity: 0;
-  }
-  50%,
-  100% {
-      opacity: 1;
-  }
 }
