--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -2067,10 +2067,51 @@ body {
               margin-top: calc(71px/2);
               margin-right: calc(-356px/2);
               z-index: 3;
+              transform:translateX(-15px);
+              transition:all 1s ease .3s;
+              opacity: 0;
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+                
+                .anim-inner{
+                  animation: jump 2s linear .7s;
+                }
+              }
               @include mq_maxH() {
                 width: calc((325/1270) * #{$new_vh});
                 margin-top: calc((71/1270) * #{$new_vh});
                 margin-right: calc((-356/1270) * #{$new_vh});
+              }
+
+              @keyframes jump{
+                0%{
+                  transform: translateY(-2%) translateX(-2%) rotate(0deg);
+                  
+                }
+                14.2%{
+                  transform: translateY(0px) translateX(-4%) rotate(-12deg);
+                }
+                28.4%{
+                  transform: translateY(-2%) translateX(-6%) rotate(-12deg);
+                }
+                42.6%{
+                  transform: translateY(0px) translateX(-8%)  rotate(-12deg);
+                }
+                56.8%{
+                  transform: translateY(-2%) translateX(-6%)  rotate(-0deg);
+                }
+                71%{
+                  transform: translateY(0px) translateX(-4%)  rotate(0deg);
+                }
+                85.2%{
+                  transform: translateY(-2%) translateX(-2%) rotate(0deg);
+                }
+                100%{
+                  transform: translateY(0px) translateX(0px) rotate(0deg);
+                }
+
               }
             }
             .deco-illust2{
@@ -2081,10 +2122,51 @@ body {
               margin-top: calc(126px/2);
               margin-right: calc(-678px/2);
               z-index: 3;
+              transform:translateX(15px);
+              transition:all 1s ease .3s;
+              opacity: 0;
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+
+                .anim-inner{
+                  animation: jump2 2s linear .7s;
+                }
+              }
               @include mq_maxH() {
                 width: calc((273/1270) * #{$new_vh});
                 margin-top: calc((126/1270) * #{$new_vh});
                 margin-right: calc((-678/1270) * #{$new_vh});
+              }
+
+              @keyframes jump2{
+                0%{
+                  transform: translateY(-2%) translateX(2%) rotate(0deg);
+                  
+                }
+                14.2%{
+                  transform: translateY(0px) translateX(4%) rotate(12deg);
+                }
+                28.4%{
+                  transform: translateY(-2%) translateX(6%) rotate(12deg);
+                }
+                42.6%{
+                  transform: translateY(0px) translateX(8%)  rotate(12deg);
+                }
+                56.8%{
+                  transform: translateY(-2%) translateX(6%)  rotate(0deg);
+                }
+                71%{
+                  transform: translateY(0px) translateX(4%)  rotate(0deg);
+                }
+                85.2%{
+                  transform: translateY(-2%) translateX(2%) rotate(0deg);
+                }
+                100%{
+                  transform: translateY(0px) translateX(0px) rotate(0deg);
+                }
+
               }
             }
             .deco-illust3{
