--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -337,7 +337,7 @@ body {
       width: fit-content;
       // background: $bg_color;
       background: linear-gradient(90deg, $bg_color, #343c55);
-      box-shadow: 1px 1px 20px 7px rgba(0,0,0,.11);
+      // box-shadow: 1px 1px 20px 7px rgba(0,0,0,.11);
       transition: box-shadow 0.5s ease 3s;
       @include mq_maxH() {
         height: 100%;
@@ -448,7 +448,7 @@ body {
 
           @include mq_maxH() {
             width: calc((348/1270) * #{$new_vh});
-            margin-top: calc((10/1270) * #{$new_vh});
+            margin-top: calc((20/1270) * #{$new_vh});
           }
 
        }
@@ -3004,4 +3004,51 @@ body {
     }
   }
 
+}
+
+///西山スタイル
+.mainvisual {
+  margin-left: (100px/2);
+  @media screen and (max-width: 960px) {
+    margin-left: (96px/2);
+  }
+  @include mq_maxH() {
+    margin-left: 0;
+  }
+}
+.footer {
+  margin-right: (100px/2);
+  @media screen and (max-width: 960px) {
+    margin-right: (96px/2);
+  }
+  @include mq_maxH() {
+    margin-right: 0;
+  }
+}
+.scroll-box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: (1270px/2);
+  pointer-events: none;
+  z-index: 1;
+  display: flex;
+  @include mq_maxH() {
+    display: none;
+  }
+
+  .block1,
+  .block3 {
+    width: (111px/2);
+    background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-bg-layer.png);
+    background-size: cover;
+  }
+  .block2 {
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 1px 1px 20px 7px rgba(0, 0, 0, 0.11);
+    z-index: 1;
+  }
 }
