--- a/assets/sass/202312product_zakka2.scss
+++ b/assets/sass/202312product_zakka2.scss
@@ -336,7 +336,6 @@ body {
       align-items: flex-start;
       width: fit-content;
       background: #f5eac1;
-      box-shadow: 1px 1px 20px 7px rgba(0,0,0,.11);
       transition: box-shadow 0.5s ease 3s;
       @include mq_maxH() {
         height: 100%;
@@ -1354,3 +1353,50 @@ body {
   }
 
 }
+///西山スタイル
+.mainvisual {
+  margin-left: (100px/2);
+  @media screen and (max-width: 960px) {
+    margin-left: (96px/2);
+  }
+  @include mq_maxH() {
+    margin-left: 0;
+  }
+}
+.footer {
+  margin-right: (100px/2);
+  @media screen and (max-width: 960px) {
+    margin-right: (96px/2);
+  }
+  @include mq_maxH() {
+    margin-right: 0;
+  }
+}
+.scroll-box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: (1270px/2);
+  pointer-events: none;
+  z-index: 1;
+  display: flex;
+  @include mq_maxH() {
+    display: none;
+  }
+
+  .block1,
+  .block3 {
+    width: (111px/2);
+    background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/vol2-yaler.png);
+    background-size: cover;
+  }
+  .block2 {
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 1px 1px 20px 7px rgba(0, 0, 0, 0.11);
+    z-index: 1;
+  }
+}
+
