ファイルの整理とスクロールバーを非表示に

--- a/assets/sass/202312product_zakka1.scss
+++ b/assets/sass/202312product_zakka1.scss
@@ -145,7 +145,12 @@ body {
       opacity: 1;
       visibility: visible;
       transition: 1s ease;
+
+      &::-webkit-scrollbar{
+        display: none;
+      }
     }
+   
     .scroll-inner {
       &.show {
         opacity: 1;
