--- a/assets/sass/202312product_zakka2.scss
+++ b/assets/sass/202312product_zakka2.scss
@@ -240,6 +240,9 @@ body {
       opacity: 1;
       visibility: visible;
       transition: 1s ease;
+      &::-webkit-scrollbar{
+        display: none;
+      }
     }
     .scroll-inner {
       &.show {
