扉ページのアニメーション

--- a/assets/sass/202312product_zakka1.scss
+++ b/assets/sass/202312product_zakka1.scss
@@ -145,9 +145,11 @@ body {
       opacity: 1;
       visibility: visible;
       transition: 1s ease;
+      -ms-overflow-style: none; 
+      scrollbar-width: none; 
 
-      &::-webkit-scrollbar{
-        display: none;
+      ::-webkit-scrollbar{
+        display: none!important;
       }
     }
    
@@ -212,6 +214,12 @@ body {
       }
     }
   }
+}
+
+.scroll-contents::-webkit-scrollbar{
+
+    display: none;
+  
 }
 
 
