--- a/assets/sass/202312product_zakka_opening.scss
+++ b/assets/sass/202312product_zakka_opening.scss
@@ -128,6 +128,64 @@ body, html {
   position: relative;
   display: flex;
   flex-direction: column;
+  opacity: 0;
+  visibility: hidden;
+  transition:all 1s ease ;
+  overflow: hidden;
+
+  &.show{
+    opacity: 1;
+    visibility: visible;
+
+    .heading{
+      opacity: 1;
+      clip-path:inset(0 0 0 0);
+      
+    }
+
+    .main-ttl{
+      opacity: 1;
+      filter: blur(0);
+    }
+
+    .main-lead{
+      opacity: 1;
+      filter: blur(0);
+    }
+
+    .page2-main,
+    .page1-main{
+      clip-path: inset(0 0 0 0);
+      opacity: 1;
+    }
+
+    .page-btn{
+      width: calc(272/1054)*100%;
+    }
+
+    .page-btn-txt{
+      opacity: 1;
+    }
+
+    .page1{
+      .page-ofuda{
+        img{
+          animation: sample_anime01 3s ease 2.3s;
+          opacity: 1;
+        }
+      }
+    }
+    .page2{
+      .page-ofuda{
+        img{
+          animation: sample_anime02 3s ease 2.3s;
+          opacity: 1;
+        }
+      }
+    }
+
+
+  }
 
   @include mq{
     flex-direction: row;
@@ -146,6 +204,10 @@ body, html {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+  clip-path: inset(0 0 100% 0);
+  opacity: 0;
+  transition:all .8s ease 1.3s;
+  
   @include mq{
     margin-top: calc(79/1054)*100%;
   }
@@ -176,11 +238,32 @@ body, html {
 }
 
 .main-ttl-wrapper{
+  position: relative;
+ 
   @include mq{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+  }
+}
+
+.main-ttl-background{
+  display: block;
+  width: 102%;
+  height: 100%;
+  background-repeat: repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+
+  img{
+    height: 100vh;
+    -webkit-border-before-width: 100%;
   }
 }
 
@@ -191,6 +274,9 @@ body, html {
   left: 50%;
   transform: translate(-50%,-50%);
   z-index: 3;
+  opacity: 0;
+  transition: 1.1s ease;
+  filter: blur(10px);
 
   @include mq{
     width: calc(442/630)*100%;
@@ -201,18 +287,34 @@ body, html {
   }
 }
 
+.page1,.page2{
+ 
+
+}
 
 
 .page1{
   height: 50%;
-  background-color: #7eb8cb;
+  // background-color: #7eb8cb;
   position: relative;
   display: block;
+  
 
   @include mq{
     width: calc(1054/$base_w)*100%;
-    height: 100%;
+    height: 100vh;
+    padding-top: 100vh;
 
+  }
+
+  .heading{
+    @include mq{
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 3;
+    }
   }
 
   .heading-ttl{
@@ -226,16 +328,27 @@ body, html {
   width: calc(542/$base_w_sp)*100%;
   padding-top: calc(50/$base_w_sp)*100%;
   margin-left: calc(115/$base_w_sp)*100%;
+  opacity: 0;
+  clip-path: inset(0 0 100% 0);
+  transition: 1s ease .6s;
 
   @include mq{
-    width: calc(881/1054)*100%;
-    margin: calc(80/1054)*100% 0 0 calc(64/1054)*100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     padding: 0;
+    margin: 0;
+  }
+
+  img{
+    width: 100%;
+    height: 100vh;
   }
 }
 
 .page-btn{
-  width: calc(272/1054)*100%;
   padding: calc(16/1054)*100% 0 calc(23/1054)*100% 0;
   background: #fff;
   border: 1px solid #000;
@@ -246,12 +359,25 @@ body, html {
   bottom: calc(121px/2);
   left: 50%;
   transform: translateX(-50%);
-
+  width: 0;
+  transition:all .6s ease 1.6s;
+  
   .page-btn-txt{
     width: calc(153/272)*100%;
     display: block;
     margin: 0 auto;
+    transition:opacity .6s ease 2s;
+    opacity: 0;
   }
+
+  @include mq{
+    &:hover{
+      .page-btn-txt{
+        transform: scale(1.05);
+      }
+    }
+  }
+
 }
 
 .page-ofuda{
@@ -260,6 +386,11 @@ body, html {
   left: calc(40/$base_w_sp)*100%;
   width: calc(67/$base_w_sp)*100%;
 
+  img{
+    opacity: 0;
+    transition: opacity 1s ease 2.4s;
+  }
+
   @include mq{
     width: calc(67/1054)*100%;
     left: auto;
@@ -267,6 +398,24 @@ body, html {
     bottom: auto;
     top: 50%;
     transform: translateY(-50%);
+  }
+
+  @keyframes sample_anime01 {
+    0% {
+        visibility:visible;
+        opacity: 0;
+        transform:  rotate(-30deg) scale(1.6);
+    }
+    30% {
+        visibility:visible;
+        opacity: 0.8;
+        transform:  rotate(5deg) scale(1.02);
+    }
+    100% {
+        visibility:visible;
+        opacity: 1.0;
+        transform: rotate(0deg);
+    }
   }
 }
 
@@ -278,6 +427,7 @@ body, html {
   @include mq{
     padding-top: 100vh;
     width: calc(1054/$base_w)*100%;
+    height: 100vh;
   }
 
   .page-ofuda{
@@ -286,6 +436,24 @@ body, html {
       top: 50%;
       left: calc(50/1054)*100%;
       transform: translateY(-50%);
+    }
+
+    @keyframes sample_anime02 {
+      0% {
+          visibility:visible;
+          opacity: 0;
+          transform:  rotate(30deg) scale(1.6);
+      }
+      30% {
+          visibility:visible;
+          opacity: 0.8;
+          transform:  rotate(-5deg) scale(1.02);
+      }
+      100% {
+          visibility:visible;
+          opacity: 1.0;
+          transform: rotate(0deg);
+      }
     }
   }
 
@@ -309,6 +477,9 @@ body, html {
 
 .page2-main{
   height: 100%;
+  opacity: 0;
+  clip-path: inset(0 0 100% 0);
+  transition: 1s ease .6s;
 
   @include mq{
     position: absolute;
@@ -321,7 +492,7 @@ body, html {
   img{
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: 100vh;
   }
 }
 
@@ -355,10 +526,16 @@ body, html {
   font-family: "TsukushiAMaruGothic-B";
   text-align: center;
   line-height: calc(50/36);
+  z-index: 10;
   @include mq{
     margin-top: calc(70/625)*100%;
     width: calc(368/625)*100%;
   }
+  
+    opacity: 0;
+    filter: blur(10px);
+    transition:all 1s ease;
+  
 }
 
 
